[package]
name = "ratatui_inputs"
description = "ratatui library to process sineptic text input format"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.0"
readonly = "0.2.12"
s_text_input_f = "0.3"
s_text_input_f-parser = "0.1"

[features]
fast_select_one = []
fast_select_with_enter = []
